main/default/objects/Connected_Orgs_Settings__c/Connected_Orgs_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Connected Orgs Settings</label>
</CustomObject>