main/default/objects/Connected_Orgs_Settings__c/fields/Auth_Token_Refreshed_At__c.field-meta.xml
<CustomField>
    <fullName>Auth_Token_Refreshed_At__c</fullName>
    <label>Auth Token Refreshed At</label>
    <type>DateTime</type>
</CustomField>