main/default/objects/Connected_Orgs_Settings__c/fields/Connected_App_Created_At__c.field-meta.xml
<CustomField>
    <fullName>Connected_App_Created_At__c</fullName>
    <label>Connected App Created At</label>
    <type>DateTime</type>
</CustomField>