main/default/objects/Connected_Orgs_Settings__c/fields/Connected_App_ID__c.field-meta.xml
<CustomField>
    <fullName>Connected_App_ID__c</fullName>
    <label>Connected App ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>