main/default/objects/Connected_Orgs_Settings__c/fields/Passthrought_Email__c.field-meta.xml
<CustomField>
    <fullName>Passthrought_Email__c</fullName>
    <label>Passthrough Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>