main/default/objects/Connected_Orgs_Settings__c/fields/Passthrought_Mode__c.field-meta.xml
<CustomField>
    <fullName>Passthrought_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Passthrough Mode</label>
    <type>Checkbox</type>
</CustomField>