main/default/objects/Connected_Orgs_Settings__c/fields/Use_Managed_App__c.field-meta.xml
<CustomField>
    <fullName>Use_Managed_App__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Managed App</label>
    <type>Checkbox</type>
</CustomField>