main/default/objects/Connected_Orgs_Settings__c/fields/Use_Oauth_for_Self_Org__c.field-meta.xml
<CustomField>
    <fullName>Use_Oauth_for_Self_Org__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Oauth for Self Org</label>
    <type>Checkbox</type>
</CustomField>